tests/machine/x/scala/group_by_sort.error
exit status 1
/workspace/mochi/tests/machine/x/scala/group_by_sort.scala:10: error: value cat is not a member of scala.collection.immutable.Map[String,Any]
    val grouped = (((for { i <- items } yield (i.cat, i)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).sortBy(g => -(for { x <- g } yield x.`val`).sum)).map{ g => Map("cat" -> g.key, "total" -> (for { x <- g } yield x.`val`).sum) }.toList
                                                 ^
/workspace/mochi/tests/machine/x/scala/group_by_sort.scala:10: error: value map is not a member of Any
    val grouped = (((for { i <- items } yield (i.cat, i)).groupBy(_._1).map{ case(k,list) => _Group(k, list.map(_._2)) }.toList).sortBy(g => -(for { x <- g } yield x.`val`).sum)).map{ g => Map("cat" -> g.key, "total" -> (for { x <- g } yield x.`val`).sum) }.toList
                                                                                                            ^
two errors found
